--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     tools:context="com.vincentlaf.story.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <android.support.v4.view.ViewPager
+    <com.vincentlaf.story.CustomViewPager
         android:id="@+id/z_viewpager_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
