--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.vincentlaf.story.MainActivity"
+    tools:context="com.vincentlaf.story.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <com.vincentlaf.story.CustomViewPager
+    <com.vincentlaf.story.others.CustomViewPager
         android:id="@+id/z_viewpager_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
