--- a/app/src/main/res/layout/activity_story_details.xml
+++ b/app/src/main/res/layout/activity_story_details.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white_parent"
     android:fitsSystemWindows="true"
     tools:context="com.vincentlaf.story.activity.StoryDetailsActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:fitsSystemWindows="true"
         android:layout_height="250dp"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay"
+        >
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/z_collapsingtoolbarlayout_story"
@@ -24,10 +26,10 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
-                android:fitsSystemWindows="true"
                 android:id="@+id/z_imageview_story"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax" />
 
@@ -40,9 +42,13 @@
         </android.support.design.widget.CollapsingToolbarLayout>
 
 
+
+
+
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.NestedScrollView
+        android:id="@+id/z_scrollview_story"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -52,13 +58,86 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/z_textview_test"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:id="@+id/z_linearlayout_story"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp" />
+                android:layout_margin="16dp"
+                android:background="@drawable/z_item_storylist_selector"
+                android:clickable="true"
+                android:focusable="true"
+                android:orientation="vertical"
+                android:padding="16dp">
 
+                <TextView
+                    android:id="@+id/z_textview_story_tittle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:gravity="center"
+                    android:text="Simple design in life"
+                    android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/z_textview_story_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="There are only two ways to live your life. One is as though nothing is a miracle. The other is as though everything is a miracle." />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    android:text="2017年12月30日 08:22"
+                    android:textSize="13sp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp">
+
+                    <TextView
+                        android:id="@+id/z_txt_btn_like"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/z_ripple"
+                        android:drawableLeft="@drawable/ic_like_not_24dp"
+                        android:drawablePadding="5dp"
+                        android:gravity="center_vertical"
+                        android:text="1,122" />
+
+                    <TextView
+                        android:id="@+id/z_txt_btn_comment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="90dp"
+                        android:background="@drawable/z_ripple"
+                        android:drawableLeft="@drawable/ic_comment_24dp"
+                        android:drawablePadding="5dp"
+                        android:gravity="center_vertical"
+                        android:text="11" />
+
+                    <TextView
+                        android:id="@+id/z_txt_btn_favorite"
+                        android:layout_width="40dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentTop="true"
+                        android:layout_gravity="right"
+                        android:background="@drawable/z_ripple"
+                        android:drawableRight="@drawable/ic_favorite_not_24dp"
+                        android:paddingRight="8dp" />
+                </RelativeLayout>
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/z_recyclerview_comments"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
@@ -68,8 +147,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:src="@drawable/ic_comment_24dp"
         app:layout_anchor="@id/appbar"
         app:layout_anchorGravity="bottom|end" />
+
 
 </android.support.design.widget.CoordinatorLayout>
