--- a/app/src/main/res/layout/z_item_collection.xml
+++ b/app/src/main/res/layout/z_item_collection.xml
@@ -1,6 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/z_relative_layout_collection"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="8dp"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
+    android:layout_marginTop="8dp"
+    android:orientation="vertical"
+    android:background="@drawable/z_item_storylist_bg_press"
+    android:paddingBottom="8dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="8dp">
 
-</android.support.constraint.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/z_img_collection_item"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/avatar_1" />
+
+        <LinearLayout
+            android:id="@+id/z_linearlayout_collection_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/z_img_collection_item">
+
+            <TextView
+                android:id="@+id/z_txt_collection_item_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/z_linearlayout_collection_item_name"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="8dp"
+                android:layout_toRightOf="@+id/z_img_collection_item"
+                android:layout_weight="1"
+                android:text="生死有命，富贵在天。" />
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp">
+
+        <TextView
+            android:id="@+id/z_txt_collection_item_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:gravity="right"
+            android:text="2017年12月30日 13:24" />
+
+        <TextView
+            android:id="@+id/z_txt_collection_item_like"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="21dp"
+            android:layout_toStartOf="@+id/z_txt_collection_item_collection"
+            android:background="@drawable/z_ripple"
+            android:drawableLeft="@drawable/ic_like_not_24dp"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:text="1,122" />
+
+        <TextView
+            android:id="@+id/z_txt_collection_item_collection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="23dp"
+            android:background="@drawable/z_ripple"
+            android:drawableLeft="@drawable/ic_comment_24dp"
+            android:drawablePadding="5dp"
+            android:gravity="center_vertical"
+            android:text="11" />
+    </RelativeLayout>
+</LinearLayout>
+
