--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,6 +20,10 @@
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
             android:title="Tools" />
+        <item
+            android:id="@+id/nav_collection"
+            android:icon="@drawable/ic_grade_black_24dp"
+            android:title="我的收藏" />
     </group>
 
     <item android:title="Communicate">
