--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -7,10 +7,11 @@
         android:id="@+id/z_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/z_recyclerview_frag1"
-        android:layout_gravity="bottom"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="200dp"
+        android:layout_gravity="bottom" />
 
 </android.support.design.widget.CoordinatorLayout>
