--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,7 @@
     <color name="z_battle_ship_grey">#535752</color>
     <color name="z_medium_turquoise">#3CCAD2</color>
     <color name="z_light_grey">#D6D6D6</color>
+
+    <color name="z_login_background">#f0f0f0</color>
+    <color name="z_login_foreground">#353535</color>
 </resources>
