--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,12 +12,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+    <Button
+        android:id="@+id/button_userPic"
+        android:layout_width="@dimen/dp_72"
+        android:layout_height="@dimen/dp_72"
+        android:background="@mipmap/ic_launcher_round"
+        android:bottom="10dp"
+        android:left="10dp"
+        android:right="10dp"
+        android:shape="rectangle"
+        android:top="10dp" />
 
     <TextView
         android:id="@+id/nav_username"
@@ -30,7 +34,6 @@
     <TextView
         android:id="@+id/nav_phone"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="尚未登录" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
