--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,23 +7,23 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/drawerLayout_menu_import" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="@string/drawerLayout_menu_Gallery" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/drawerLayout_menu_slideshow" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/drawerLayout_menu_tools" />
         <item
             android:id="@+id/nav_collection"
             android:icon="@drawable/ic_grade_black_24dp"
-            android:title="我的收藏" />
+            android:title="@string/drawerLayout_menu_collection" />
     </group>
 
     <item android:title="Communicate">
@@ -31,11 +31,19 @@
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="@string/drawerLayout_menu_share" />
             <item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="@string/drawerLayout_menu_send" />
+            <item
+                android:id="@+id/nav_friend"
+                android:icon="@drawable/ic_person_black_24dp"
+                android:title="@string/drawerLayout_menu_friend" />
+            <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_settings_black_24dp"
+                android:title="@string/drawerLayout_menu_setting" />
         </menu>
     </item>
 
