--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,7 +48,8 @@
             android:layout_height="48dp"
             android:layout_marginBottom="40dp"
             android:background="@drawable/z_login_input_bg"
-            android:hint="your little secret" />
+            android:hint="your little secret"
+            android:inputType="textPassword" />
 
         <Button
             android:id="@+id/sign_in_button"
