--- a/app/src/main/res/layout/z_item_storylist.xml
+++ b/app/src/main/res/layout/z_item_storylist.xml
@@ -9,6 +9,7 @@
     android:background="@drawable/z_item_storylist_selector">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/z_story_item_img"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center_vertical"
@@ -24,12 +25,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/z_story_item_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="给一个焦虑症的朋友"
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/z_story_item_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
@@ -45,6 +48,7 @@
             android:layout_marginRight="8dp">
 
             <TextView
+                android:id="@+id/z_story_item_username"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
@@ -52,7 +56,7 @@
                 android:textSize="12dp" />
 
             <TextView
-
+                android:id="@+id/z_story_item_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
@@ -60,6 +64,7 @@
                 android:textSize="12dp" />
 
             <TextView
+                android:id="@+id/z_story_item_distance"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -67,7 +72,6 @@
                 android:paddingRight="8dp"
                 android:text="1.6km" />
         </LinearLayout>
-
     </LinearLayout>
 </LinearLayout>
 
