--- a/app/src/main/res/layout/z_map_marker_active.xml
+++ b/app/src/main/res/layout/z_map_marker_active.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/ic_map_marker_active"
     android:gravity="center_horizontal"
     android:orientation="vertical">
@@ -12,13 +12,14 @@
         android:layout_height="60dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            app:civ_border_color="@color/white_child"
-            app:civ_border_width="1dp"
+            android:id="@+id/z_map_marker_headimg"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="8dp"
-            android:src="@drawable/avatar_1" />
+            android:src="@drawable/avatar_1"
+            app:civ_border_color="@color/white_child"
+            app:civ_border_width="1dp" />
 
     </RelativeLayout>
 
