--- a/app/src/main/res/layout/z_map_marker_normal.xml
+++ b/app/src/main/res/layout/z_map_marker_normal.xml
@@ -12,6 +12,7 @@
         android:layout_height="40dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/z_map_marker_headimg"
             app:civ_border_color="@color/white_child"
             app:civ_border_width="1dp"
             android:layout_width="20dp"
