--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,9 +4,8 @@
 
     <item
         android:id="@+id/action_post"
+        android:icon="@drawable/ic_add_black_24dp"
         android:title="发布"
-        app:showAsAction="always"
-        android:icon="@drawable/ic_post_24dp"
-        />
+        app:showAsAction="always" />
 
 </menu>
