--- a/app/src/main/res/layout/fragment_tab1.xml
+++ b/app/src/main/res/layout/fragment_tab1.xml
@@ -54,6 +54,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/z_ll_navigate"
             android:layout_width="100dp"
             android:layout_height="40dp"
             android:layout_above="@+id/z_linearlayout_map_info_base"
@@ -63,13 +64,23 @@
             android:gravity="right"
             android:padding="5dp">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="5dp"
+                android:text="GO"
+                android:textColor="@color/white_child"
+                android:textStyle="bold" />
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/avatar_1" />
+                android:src="@drawable/ic_navigation_24dp" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/z_ll_post"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_above="@+id/z_linearlayout_map_info_base"
@@ -82,12 +93,16 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/avatar_1" />
+                android:src="@drawable/ic_menu_send" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="POST" />
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="5dp"
+                android:text="POST"
+                android:textColor="@color/white_child"
+                android:textStyle="bold" />
         </LinearLayout>
 
     </RelativeLayout>
